# contextforge

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  NEEDS-DEP-task-2.2.md  NEEDS-DEP-task-2.4.md  NEEDS-DEP-task-3.3.md  NEEDS-DEP-task-3.4.md  README.md  READY-FOR-MERGE-task-1.1.md  RELEASE_NOTES.md  SPEC-DRIFT-task-2.2.md  SPEC-DRIFT-task-3.1.md  contextforge.example.toml  go.mod
.github/workflows/: _tmp-diagnose-cosign-verify.yml  _tmp-validate-attest.yml  _tmp-validate-multiarch.yml  ci.yml  release.yml  verify-image.yml
_dispatch/: README.md  reviewer__per-PR.md
bench/: Cargo.toml  README.md
bench/src/: backends.rs  corpus.rs  lib.rs  main.rs  measure.rs  rss.rs  runner.rs  tests.rs
cmd/contextforge/: main.go  main_test.go
core/: Cargo.toml  build.rs
core/examples/: phase19_real_recall.rs  phase20_recall_via_retriever.rs  phase21_hybrid_rerank_recall.rs  phase24_tokenizer_recall.rs  phase29_recall_via_qdrant.rs  phase49_large_corpus_recall.rs
core/migrations/: 0010_workspaces.sql  0011_index_jobs.sql  0013_memory_items.sql  0014_eval_runs.sql  0015_search_traces.sql  0016_search_traces_fts.sql  0017_memory_items_add_pin_actor.sql  0018_eval_case_results.sql  0019_indexing_events.sql  0020_users.sql  0021_workspaces_owner.sql  0022_workspace_members.sql
core/proto/: console_data_plane.proto
core/src/: contract.rs  health.rs  lib.rs  main.rs  server.rs
core/src/chunker/: mod.rs
core/src/data_plane/: eval.rs  events.rs  health.rs  indexing_events.rs  job.rs  membership.rs  memory.rs  mod.rs  search.rs  search_persist.rs  user.rs  workspace.rs
core/src/embedding/: cache.rs  deterministic.rs  factory.rs  fastembed_provider.rs  mod.rs  remote_provider.rs  tests.rs  traits.rs
core/src/eval/: mod.rs  runner.rs  store.rs
core/src/identity/: mod.rs  store.rs
core/src/indexer/: mod.rs
core/src/jobs/: index_session_backend.rs  mod.rs
core/src/membership/: mod.rs  store.rs
core/src/memory/: mod.rs  store.rs
core/src/memoryops/: audit.rs  mod.rs
core/src/parser/: mod.rs
core/src/rerank/: cross_encoder.rs  factory.rs  identity.rs  mod.rs  remote_reranker.rs  traits.rs
core/src/retriever/: fusion.rs  mod.rs
core/src/retriever/vector/: brute_force.rs  factory.rs  hnsw.rs  lance_db.rs  mod.rs  noop.rs  qdrant.rs  sqlite_vec.rs  tests.rs  traits.rs  types.rs
core/src/scanner/: mod.rs
core/src/workspace/: mod.rs
core/tests/: core_skeleton.rs  data_plane_integration.rs  eval_integration.rs  indexjob_real_runner.rs  jobs_lifecycle.rs  memory_integration.rs  phase2_smoke.rs  phase4_smoke.rs  phase5_smoke.rs  phase6_smoke.rs  phase9_index_smoke.rs  proto_contract.rs  qdrant_live_recall.rs  remote_embedding_recall.rs  remote_rerank_recall.rs  reranker_env_wiring.rs  scanner.rs  search_persist_integration.rs  search_real_retriever.rs  workspace_smoke.rs
deploy/: .env.production.example  console-stack.yml  docker-compose.production.yml
deploy/caddy/: Caddyfile
docs/: roadmap.md  s2v-adapter.md
docs/consoleapi/: openapi.yaml
docs/decisions/: README.md  adr-001-go-rust-dual-binary-architecture.md  adr-002-sqlite-tantivy-layered-storage.md  adr-003-cli-rest-mcp-grpc-interfaces.md  adr-004-local-first-privacy-baseline.md  adr-005-readonly-import-draft-export.md  adr-006-recall-eval-acceptance-gate.md  adr-007-minimal-tarball-distribution.md  adr-008-core-library-selection.md  adr-009-provenance-timestamp-placeholder.md  adr-010-audit-cross-language-unification.md  adr-011-single-driver-with-subagents.md  adr-012-main-agent-governance-autonomy.md  adr-013-cli-data-plane-grpc-bridge.md  adr-014-cross-phase-exit-criteria-validation.md  adr-015-console-contract-v1-compatibility.md  adr-016-cross-process-rust-go-via-grpc-bridge.md  adr-017-console-contract-completion-22-endpoint.md  adr-018-fallback-inmem-default-reversal.md  adr-020-health-component-breakdown.md  adr-021-memory-event-bus-bridge.md  adr-022-memory-is-pinned-field-amendment.md  adr-023-vector-backend-default.md  adr-024-console-api-semantic-forward.md  adr-025-hybrid-scoring-fusion.md  adr-026-reranker-provider.md  adr-027-embedding-provider-abstraction.md  adr-028-vector-persistence-strategy.md  adr-029-code-and-cjk-tokenizer-and-eval-hardening.md  adr-030-production-vector-backend.md  adr-031-observability-hardening.md  adr-032-memory-ops-hardening.md  adr-033-release-ci-hardening.md  adr-034-production-vector-live-recall.md  adr-035-cjk-true-segmenter-and-tokenizer-default.md  adr-036-governance-debt-cleanup.md  adr-037-vector-backend-config-plumbing-and-completeness.md  adr-038-governance-debt-cleanup-2.md  adr-039-vector-config-completeness.md  adr-040-observability-hardening.md  (+13 more)
docs/deploy/: production.md
docs/playbooks/: autonomous-v0.1-ship.md  autonomous-v0.2-cli-pipeline.md  autonomous-v0.3-console-contract-v1.md
docs/prds/: context-forge.prd.md
docs/releases/: v0.1-evidence.md  v0.1.0-artifacts.md  v0.10.0-artifacts.md  v0.10.0-evidence.md  v0.11.0-artifacts.md  v0.11.0-evidence.md  v0.12.0-artifacts.md  v0.12.0-evidence.md  v0.13.0-artifacts.md  v0.13.0-evidence.md  v0.14.0-artifacts.md  v0.14.0-evidence.md  v0.15.0-artifacts.md  v0.15.0-evidence.md  v0.16.0-artifacts.md  v0.16.0-evidence.md  v0.17.0-artifacts.md  v0.17.0-evidence.md  v0.18.0-artifacts.md  v0.18.0-evidence.md  v0.19.0-artifacts.md  v0.19.0-evidence.md  v0.2.0-artifacts.md  v0.2.0-evidence.md  v0.20.0-artifacts.md  v0.20.0-evidence.md  v0.21.0-artifacts.md  v0.21.0-evidence.md  v0.22.0-artifacts.md  v0.22.0-evidence.md  v0.23.0-artifacts.md  v0.23.0-evidence.md  v0.24.0-artifacts.md  v0.24.0-evidence.md  v0.25.0-artifacts.md  v0.25.0-evidence.md  v0.26.0-artifacts.md  v0.26.0-evidence.md  v0.27.0-artifacts.md  v0.27.0-evidence.md  (+43 more)
docs/retrospectives/: phase-9-cross-phase-spec-drift.md
docs/s2v/: standard.md  tier-decision-tree.md
docs/spikes/: _template.md  phase-18-comparison.md  phase-18-handoff.md  (+14 more)
proto/: buf.yaml
scripts/: console_smoke.sh  quickstart_smoke.sh  release_smoke.sh  spec_drift_lint.sh  spike_vector_backends.sh
(+438 files in other folders)
