[package]
name = "contextforge-bench"
version = "0.1.0"
edition = "2021"
publish = false

# task-18.2 spike harness. Depends only on contextforge-core (frozen vector trait +
# NoopVectorBackend) + serde/serde_json (already in the workspace lock). No real backend deps —
# task-18.3-18.6 add sqlite-vec / qdrant / lancedb / hnsw behind their own vector-<backend> feature.

[dependencies]
contextforge-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
