[package]
name = "contextforge-bench"
version = "0.1.0"
edition = "2021"
publish = false

# task-18.2 spike harness. Depends only on contextforge-core (frozen vector trait +
# NoopVectorBackend) + serde/serde_json (already in the workspace lock). No real backend deps —
# task-18.3-18.6 add sqlite-vec / qdrant / lancedb / hnsw behind their own vector-<backend> feature.

[dependencies]
contextforge-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
# task-18.6: enable the hnsw backend (pulls contextforge-core's vector-hnsw → instant-distance).
vector-hnsw = ["contextforge-core/vector-hnsw"]
# task-18.3: enable the sqlite-vec backend (pulls contextforge-core's vector-sqlite → sqlite-vec).
vector-sqlite = ["contextforge-core/vector-sqlite"]
# task-18.4: enable the qdrant backend (pulls contextforge-core's vector-qdrant → qdrant-client).
vector-qdrant = ["contextforge-core/vector-qdrant"]
