[package]
name = "contextforge-core"
version = "0.1.0"
edition = "2021"
description = "ContextForge Rust data-plane (scan/parse/chunk/index/retrieve). task-1.1: frozen proto/canonical-record contract."

[lib]
name = "contextforge_core"
path = "src/lib.rs"

# task-1.3 (AC1): contextforge-core data-plane binary.
[[bin]]
name = "contextforge-core"
path = "src/main.rs"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
# task-1.3 §2A R7 decision: tokio + serde promoted to DIRECT deps (AC1/AC3-
# mandated for the tonic gRPC server; both already in Cargo.lock transitively
# via tonic 0.12 — no new supply-chain surface; folded into this task, §10-disclosed).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
# task-2.2 (parser) R7 NEEDS-DEP — main-agent chore PR `chore/dep-parser-crates`.
# 源: NEEDS-DEP-task-2.2.md（feat/task-2.2-parser）。版本由 `cargo add` 自 crates.io
# 实证解析为当前互兼容集，`cargo check --workspace` exit 0 确证 ABI 兼容（5 个
# tree-sitter 语言 grammar 编译 C 并 link tree-sitter 0.26 成功）、`cargo test
# --workspace` 零回归。NEEDS 建议号（ts 0.22 / 语言 0.20 / pulldown 0.11 /
# thiserror 1）已过时——以实证锁定为准；精确 pin 见 Cargo.lock（R7 单一事实源）。
# 用途：AC1 tree-sitter 代码解析(.go/.rs/.py/.ts/.tsx/.js/.jsx)、AC2 pulldown-cmark
# Markdown、ParseError(thiserror)。task-2.2 rebase 后用真解析替换 honest stub。
tree-sitter = "0.26.8"
pulldown-cmark = "0.13.3"
thiserror = "2.0.18"
tree-sitter-go = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
# task-2.3 (chunker) SPEC-DRIFT 裁决 → main-agent chore PR `chore/dep-sha2`。
# 源: PR #16 (feat/task-2.3-chunker) §2A worker 选 FNV-1a-64 std-only 避 R7 sha2
# 串行 → 主 agent 裁决 Blocker 级 SPEC-DRIFT（content_hash 算法跨模块不一致：
# task-3.1 importer 已用 sha256 — commit 5861e98 显式"避免 100k chunk 生日碰撞"；
# Phase 5 memoryops 去重锚点依赖一致 hash）→ sha256 一致化。
# 用途：Chunk.content_hash 用 sha256 与 ContextRecord.content_hash 跨模块对齐；
# task-2.3 rebase 后把 FNV-1a-64 替换为 sha256，保留 algo-prefix 格式
# (`sha256:<64-hex>`) forward-compat。版本 0.11.0 由 `cargo add sha2` 自 crates.io
# 实证锁定为当前互兼容集（sha2 0.11 + digest 0.11 transitive 共 8 个包）。
sha2 = "0.11.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
