[package]
name = "contextforge-core"
version = "0.1.0"
edition = "2021"
description = "ContextForge Rust data-plane (scan/parse/chunk/index/retrieve). task-1.1: frozen proto/canonical-record contract."

[lib]
name = "contextforge_core"
path = "src/lib.rs"

# task-1.3 (AC1): contextforge-core data-plane binary.
[[bin]]
name = "contextforge-core"
path = "src/main.rs"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
# task-1.3 §2A R7 decision: tokio + serde promoted to DIRECT deps (AC1/AC3-
# mandated for the tonic gRPC server; both already in Cargo.lock transitively
# via tonic 0.12 — no new supply-chain surface; folded into this task, §10-disclosed).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
# task-9.2 §5.2 NEEDS-DEP lift: tokio-stream 已作为 tonic 0.12 transitive 在
# Cargo.lock (0.1.18) — 按 task-1.3 §2A R7 lift pattern（无新供应链表面）显式
# 化为 direct dep，让 CoreService::index 用 ReceiverStream 包 mpsc 喂 tonic
# server stream。
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
# task-10.2 §5.2 NEEDS-DEP lift: serde_json 已作为 tantivy / tonic transitive 在
# Cargo.lock — 按 task-1.3 §2A R7 lift pattern（无新供应链表面）显式化为 direct
# dep，让 workspace/jobs Store 序列化 allowlist / denylist / config_snapshot 字段。
serde_json = "1"
# task-2.2 (parser) R7 NEEDS-DEP — main-agent chore PR `chore/dep-parser-crates`.
# 源: NEEDS-DEP-task-2.2.md（feat/task-2.2-parser）。版本由 `cargo add` 自 crates.io
# 实证解析为当前互兼容集，`cargo check --workspace` exit 0 确证 ABI 兼容（5 个
# tree-sitter 语言 grammar 编译 C 并 link tree-sitter 0.26 成功）、`cargo test
# --workspace` 零回归。NEEDS 建议号（ts 0.22 / 语言 0.20 / pulldown 0.11 /
# thiserror 1）已过时——以实证锁定为准；精确 pin 见 Cargo.lock（R7 单一事实源）。
# 用途：AC1 tree-sitter 代码解析(.go/.rs/.py/.ts/.tsx/.js/.jsx)、AC2 pulldown-cmark
# Markdown、ParseError(thiserror)。task-2.2 rebase 后用真解析替换 honest stub。
tree-sitter = "0.26.8"
pulldown-cmark = "0.13.3"
thiserror = "2.0.18"
tree-sitter-go = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
# task-2.3 (chunker) SPEC-DRIFT 裁决 → main-agent chore PR `chore/dep-sha2`。
# 源: PR #16 (feat/task-2.3-chunker) §2A worker 选 FNV-1a-64 std-only 避 R7 sha2
# 串行 → 主 agent 裁决 Blocker 级 SPEC-DRIFT（content_hash 算法跨模块不一致：
# task-3.1 importer 已用 sha256 — commit 5861e98 显式"避免 100k chunk 生日碰撞"；
# Phase 5 memoryops 去重锚点依赖一致 hash）→ sha256 一致化。
# 用途：Chunk.content_hash 用 sha256 与 ContextRecord.content_hash 跨模块对齐；
# task-2.3 rebase 后把 FNV-1a-64 替换为 sha256，保留 algo-prefix 格式
# (`sha256:<64-hex>`) forward-compat。版本 0.11.0 由 `cargo add sha2` 自 crates.io
# 实证锁定为当前互兼容集（sha2 0.11 + digest 0.11 transitive 共 8 个包）。
sha2 = "0.11.0"
# task-2.4 (indexer) R7 NEEDS-DEP → main-agent chore PR `chore/dep-indexer-crates`。
# 源: NEEDS-DEP-task-2.4.md (feat/task-2.4-indexer)。版本由 `cargo add` 实证锁定
# (worker 申请 tantivy=0.22 / rusqlite=0.32 已过时 — 以 latest compatible 为准)。
# 用途：AC2 SQLite (rusqlite, bundled 避 libsqlite3-dev 系统依赖) + Tantivy (全文
# 倒排 BM25) 分层存储 (ADR-002 / PRD §Decisions Log D2)；AC4 增量更新；AC5 Phase-2
# 端到端 smoke (core/tests/phase2_smoke.rs)。
# 验证：cargo check --workspace 干净 / cargo test --workspace 零回归（scanner 12 +
# 其他 packages 全绿）；transitive 含 zstd 0.13 / sqlite-wasm-rs 0.5 / vcpkg 0.2 等
# +872 行 Cargo.lock。
tantivy = "0.26.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
# task-16.1 §5.2 NEEDS-DEP lift: base64 已作为 multiple transitive deps 在
# Cargo.lock — 按 task-1.3 §2A R7 lift pattern（无新供应链表面）显式化为 direct
# dep，让 SqliteTracePersist 以 base64-encoded prost bytes 形式存 trace_json TEXT 列。
base64 = "0.22"
# task-18.6 spike: instant-distance — pure-Rust HNSW approximate nearest-neighbour, gated behind
# the vector-hnsw feature. Optional — default build unaffected (0 new dep at default features).
instant-distance = { version = "0.6", optional = true }
# task-18.3 spike: sqlite-vec — SQLite `vec0` KNN extension (asg017/sqlite-vec), gated behind the
# vector-sqlite feature. Stable 0.1.9 pinned (0.1.10-alpha.4 ships an incomplete C amalgamation —
# missing sqlite-vec-diskann.c). Compiles via gcc on Linux x86_64 (P0); registered into rusqlite's
# bundled SQLite via sqlite3_auto_extension. Optional — default build unaffected (0 new dep).
sqlite-vec = { version = "=0.1.9", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }

# task-18.1: feature flags for future vector backend implementations.
# Each flag gates the corresponding backend impl (task-18.3-18.6).
# vector-spike is the default spike/QA backend (task-18.3).
[features]
default = []
vector-spike = []
vector-sqlite = ["dep:sqlite-vec"]
vector-qdrant = []
vector-lancedb = []
vector-hnsw = ["dep:instant-distance"]

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
